<resources>
    <string name="app_name">So</string>
    <string name="sortir">Sortir</string>
    <string name="animacions">ANIMACIONS</string>
    <string name="c_mera">Càmera</string>
    <string name="geolocalitzaci">Geolocalització</string>
    <string name="so">So</string>
    <string name="v_deo">Vídeo</string>
    <string name="enrere">Enrere</string>
    <string name="fotogrames">Fotogrames</string>
    <string name="interpolaci">Interpolació</string>
    <string name="enrereFotogrames">Enrere</string>
    <string name="clickmov">clickmov</string>
    <string name="title_activity_fotogrames">Fotogrames</string>
    <string name="enrere2">Enrere</string>
    <string name="enrere4">Enrere</string>
    <string name="posicionament_gps">Posicionament GPS</string>
    <string name="events_mapa">Events Mapa</string>
    <string name="enrere5">Enrere</string>
    <string name="enrere6">Enrere</string>
    <string name="textview">TextView</string>
    <string name="enrere7">Enrere</string>
    <string name="textview2">TextView</string>
    <string name="fer_foto_reduida">FER FOTO REDUIDA</string>
    <string name="tornar_enrere">TORNAR ENRERE</string>
    <string name="kmikm">kmikm</string>
    <string name="reduida">REDUIDA</string>
    <string name="enrere8">enrere</string>
    <string name="gravant">gravant</string>
    <string name="gravar">gravar</string>
    <string name="gravar2">gravar</string>
    <string name="reproduir">reproduir</string>
    <string name="buttonenrere">ButtonEnrere</string>
    <string name="enrere9">Enrere</string>
    <string name="enrere10">Enrere</string>
</resources>
