<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kyotoryuu.so.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        tools:ignore="UselessParent">

        <Button
            android:text="@string/animacions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonAnimacions" />

        <Button
            android:text="@string/geolocalitzaci"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonGeolocalitzacio" />

        <Button
            android:text="@string/c_mera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonCamera" />

        <Button
            android:text="@string/so"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSo" />

        <Button
            android:text="@string/v_deo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonVideo" />

        <Button
            android:text="@string/sortir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSortir" />
    </LinearLayout>
</RelativeLayout>
