<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kyotoryuu.so.Sound">

    <ToggleButton
        android:text="@string/gravar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bttnGravar"
        tools:ignore="RelativeOverlap"
        android:textOn="@string/gravant"
        android:textOff="@string/gravar2"
        android:layout_marginTop="97dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/reproduir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bttnReproduir"
        tools:ignore="RelativeOverlap"
        android:layout_below="@+id/bttnGravar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp" />

    <Button
        android:id="@+id/buttonEnrere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/bttnGravar"
        android:layout_alignTop="@+id/bttnReproduir"
        android:layout_marginTop="104dp"
        android:text="@string/enrere9" />
</RelativeLayout>
