<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_animacions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kyotoryuu.so.Animacions">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        tools:ignore="UselessParent">

        <Button
            android:text="@string/interpolaci"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonInterpolacio" />

        <Button
            android:text="@string/fotogrames"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonFotogrames" />

        <Button
            android:text="@string/enrere"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonEnrere" />
    </LinearLayout>
</RelativeLayout>
