<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context="com.example.kyotoryuu.so.Camera">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/kmikm"
            app:srcCompat="@mipmap/ic_launcher"
            android:layout_weight="0.97" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/fotoNormal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.45"
                android:text="NORMAL"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:id="@+id/fotoReduida"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.33"
                android:text="@string/reduida"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/buttonEnrere"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.22"
                android:text="@string/enrere8"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>